--- a/webchronicle/templates/sites.html
+++ b/webchronicle/templates/sites.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sites Visited</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <title>Sites List</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .table td {
+            max-width: 300px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+    </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <h1>Sites Visited</h1>
-        <table class="table table-striped">
+    <div class="container">
+        <h1>Sites</h1>
+        <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th>URL</th>
-                    <th>Visits</th>
-                    <th>Sessions details</th>
+                    <th style="width: 60%">URL</th>
+                    <th style="width: 20%">Visits</th>
+                    <th style="width: 20%">Actions</th>
                 </tr>
             </thead>
             <tbody>
-                {% for visit in visits %}
+                {% for site in sites %}
                 <tr>
-                    <td>{{ visit.url }}</td>
-                    <td>{{ visit.visit_count }}</td>
-                    <td><a href="/sessions/{{ visit.url }}" class="btn btn-primary btn-sm">View Sessions</a></td>
+                    <td><a href="{{ site.url }}" target="_blank">{{ site.url }}</a></td>
+                    <td>{{ site.visit_count }}</td>
+                    <td>
+                        <a href="{{ url_for('sessions_index', site_id=site.id) }}" class="btn btn-success">View Sessions</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
